@@ -507,6 +507,7 @@ vips_embed_class_init( VipsEmbedClass *class )
 {
 	GObjectClass *gobject_class = G_OBJECT_CLASS( class );
 	VipsObjectClass *vobject_class = VIPS_OBJECT_CLASS( class );
+	VipsOperationClass *operation_class = VIPS_OPERATION_CLASS( class );
 
 	VIPS_DEBUG_MSG( "vips_embed_class_init\n" );
 
@@ -516,6 +517,8 @@ vips_embed_class_init( VipsEmbedClass *class )
 	vobject_class->nickname = "embed";
 	vobject_class->description = _( "embed an image in a larger image" );
 	vobject_class->build = vips_embed_build;
+
+	operation_class->flags = VIPS_OPERATION_SEQUENTIAL;
 
 	VIPS_ARG_IMAGE( class, "in", -1, 
 		_( "Input" ), 
