@@ -458,6 +458,7 @@ vips_ifthenelse_class_init( VipsIfthenelseClass *class )
 {
 	GObjectClass *gobject_class = G_OBJECT_CLASS( class );
 	VipsObjectClass *vobject_class = VIPS_OBJECT_CLASS( class );
+	VipsOperationClass *operation_class = VIPS_OPERATION_CLASS( class );
 
 	VIPS_DEBUG_MSG( "vips_ifthenelse_class_init\n" );
 
@@ -467,6 +468,8 @@ vips_ifthenelse_class_init( VipsIfthenelseClass *class )
 	vobject_class->nickname = "ifthenelse";
 	vobject_class->description = _( "ifthenelse an image" );
 	vobject_class->build = vips_ifthenelse_build;
+
+	operation_class->flags = VIPS_OPERATION_SEQUENTIAL;
 
 	VIPS_ARG_IMAGE( class, "cond", -2, 
 		_( "Condition" ), 
