@@ -200,6 +200,7 @@ vips_join_class_init( VipsJoinClass *class )
 {
 	GObjectClass *gobject_class = G_OBJECT_CLASS( class );
 	VipsObjectClass *vobject_class = VIPS_OBJECT_CLASS( class );
+	VipsOperationClass *operation_class = VIPS_OPERATION_CLASS( class );
 
 	VIPS_DEBUG_MSG( "vips_join_class_init\n" );
 
@@ -209,6 +210,8 @@ vips_join_class_init( VipsJoinClass *class )
 	vobject_class->nickname = "join";
 	vobject_class->description = _( "join a pair of images" );
 	vobject_class->build = vips_join_build;
+
+	operation_class->flags = VIPS_OPERATION_SEQUENTIAL;
 
 	VIPS_ARG_IMAGE( class, "in1", -1, 
 		_( "in1" ), 
