@@ -36,6 +36,27 @@ extern "C" {
 
 #include <vips/vips.h>
 
+/** 
+ * VipsOperationFlags:
+ * @VIPS_OPERATION_NONE: no flags
+ * @VIPS_OPERATION_SEQUENTIAL: can work sequentially
+ * @VIPS_OPERATION_NOCACHE: must not be cached
+ *
+ * Flags we associate with an operation.
+ *
+ * @VIPS_OPERATION_SEQUENTIAL means that the operation works like vips_copy:
+ * it can happily process images top-to-bottom with only small non-local
+ * references.
+ *
+ * @VIPS_OPERATION_NOCACHE means that the operation must not be cached by
+ * vips. 
+ */
+typedef enum /*< flags >*/ {
+	VIPS_OPERATION_NONE = 0,
+	VIPS_OPERATION_SEQUENTIAL = 1,
+	VIPS_OPERATION_NOCACHE = 2
+} VipsOperationFlags;
+
 #define VIPS_TYPE_OPERATION (vips_operation_get_type())
 #define VIPS_OPERATION( obj ) \
 	(G_TYPE_CHECK_INSTANCE_CAST( (obj), \
@@ -66,12 +87,6 @@ typedef struct _VipsOperation {
 	guint hash;
 	gboolean found_hash;
 
-	/* Set this before the end of _build() to stop this operation from 
-	 * being cached. Some things, like sequential read from a TIFF file, 
-	 * can't be reused.
-	 */
-	gboolean nocache;
-
 } VipsOperation;
 
 typedef struct _VipsOperationClass {
@@ -80,10 +95,17 @@ typedef struct _VipsOperationClass {
 	/* Print the usage message.
 	 */
 	void (*usage)( struct _VipsOperationClass *, VipsBuf * );
+
+	/* Return a set of operation flags. If @get_flags is NULL, just use
+	 * flags.
+	 */
+	VipsOperationFlags (*get_flags)( VipsOperation * ); 
+	VipsOperationFlags flags;
 } VipsOperationClass;
 
 GType vips_operation_get_type( void );
 
+VipsOperationFlags vips_operation_get_flags( VipsOperation *operation );
 void vips_operation_class_print_usage( VipsOperationClass *operation_class );
 
 int vips_operation_call_valist( VipsOperation *operation, va_list ap );
@@ -96,7 +118,6 @@ void vips_call_options( GOptionGroup *group, VipsOperation *operation );
 int vips_call_argv( VipsOperation *operation, int argc, char **argv );
 
 void vips_cache_drop_all( void );
-void vips_operation_set_nocache( VipsOperation *operation, gboolean nocache );
 int vips_cache_operation_buildp( VipsOperation **operation );
 VipsOperation *vips_cache_operation_build( VipsOperation *operation );
 void vips_cache_print( void );
